<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F8F9"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/GestCRVisite"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/gestion_des_comptes_rendus_de_visites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GestPraticien"
        app:layout_constraintVertical_bias="0.189" />

    <Button
        android:id="@+id/GestPraticien"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/gestion_des_praticiens"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GestVisiteurs"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/GestMedicament"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginBottom="80dp"
        android:text="@string/gestion_des_medicaments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288" />

    <Button
        android:id="@+id/GestVisiteurs"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/gestion_des_visiteurs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GestMedicament"
        app:layout_constraintVertical_bias="0.104" />

</androidx.constraintlayout.widget.ConstraintLayout>