<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMedoc">

    <TextView
        android:id="@+id/ContreIndicationMedic"
        android:layout_width="341dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitreContreIndicMedic"
        app:layout_constraintVertical_bias="0.234" />

    <TextView
        android:id="@+id/TitreContreIndicMedic"
        android:layout_width="130dp"
        android:layout_height="19dp"
        android:text="@string/contre_indication"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/effetsMedic"
        app:layout_constraintVertical_bias="0.198" />

    <TextView
        android:id="@+id/TitreCodeDepotMedic"
        android:layout_width="122dp"
        android:layout_height="22dp"
        android:alpha="10"
        android:text="@string/code_d_pot_l_gal"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/CodeDepotMedic"
        android:layout_width="190dp"
        android:layout_height="18dp"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toEndOf="@+id/TitreCodeDepotMedic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/effetsMedic"
        android:layout_width="341dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitreEffetMedic"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/TitreEffetMedic"
        android:layout_width="113dp"
        android:layout_height="18dp"
        android:text="@string/effets"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CompositionMedic"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/TitreCompoMedic"
        android:layout_width="113dp"
        android:layout_height="18dp"
        android:text="@string/composition"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitreFamilleMedic"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/CompositionMedic"
        android:layout_width="341dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitreCompoMedic"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/TitreNomComMedic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom_commercial"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitreCodeDepotMedic"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/NomComMedic"
        android:layout_width="192dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CodeDepotMedic"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/FamilleMedoc"
        android:layout_width="190dp"
        android:layout_height="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NomComMedic"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/TitreFamilleMedic"
        android:layout_width="113dp"
        android:layout_height="18dp"
        android:text="@string/famille"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitreNomComMedic"
        app:layout_constraintVertical_bias="0.041" />

</androidx.constraintlayout.widget.ConstraintLayout>